--- a/style/styles.css
+++ b/style/styles.css
@@ -6,42 +6,89 @@ body {
 
 header {
 	background: #757575;
-	width:
+	
 }
 
 .main-logo {
 	float: left;
 	width: 13%;
+	margin-top:20px;
 }
 
 .navbar {
 	display: flex;
-	flex-direction: raw;
-	flex-wrap: wrap;
+	flex-direction: row;
+	padding:20px;
 	align-items: center;
 	align-content: center;
 }
 
 .navbar-button {
 	text-align: center;
-	font-size: 26px;
+	font-size: 20px;
 	color: white;
 	text-decoration: none;
 	border-radius: 11px;
 	background: #757575;
 	border: none;
 	padding: 10px;
-	margin-top: 30px;
-	margin-right: 15px;
-	margin-left: 15px;
-	margin-bottom: 30px;
+	margin-top: 10px;
+	margin-right: 5px;
+	margin-left: 5px;
+	margin-bottom: 10px;
 }
 
 .navbar-button:hover {
-	background: #454545
+	background: #454545;	
 }
 
 .menu-cat-img{
-	width: 15%;
+	width: 30px;
 }
 
+
+.more-button{
+	text-align: center;
+	display: flex;
+	flex-direction: row;
+	color: white;
+	text-decoration: none;
+	border-radius: 11px;
+	background: #454545;
+	width: 140px;	
+	height: 50px;
+	margin-right: 20px;
+	padding-right: 10px;	
+}
+.inputWhite {
+	width: 250px;
+	background: white;
+}
+.more-button:hover {
+	background:  rgb(54, 52, 52);
+}
+.more-button button {
+	background: none;
+	border: none;
+	color:white;
+	padding: 10px;
+	margin-right: 15px;
+	margin-left: 15px;
+	font-size: 20px;
+}
+
+.buIcon {
+	padding-right: 5px;
+}
+
+
+.searchForm {
+	padding: 20px;
+	border-radius: 11px;
+	width:200px;
+	
+}
+
+.formContainer {
+	margin-right: 40px;
+}
