--- a/style/styles.css
+++ b/style/styles.css
@@ -111,21 +111,37 @@ header {
 .latest-articles {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
+	color: white;
 }
 
 .latest-articles > div {
-	border-style: ridge;
+	
 	width: 100%;
 	height: 700px;
 	display: flex;
-	justify-content: center;
-	align-items: center;
+	flex-direction: column;
+	justify-content: start;
+	align-items: start;
+	padding-top: 20px;
+	padding-left: 80px;
+}
+.profileImg {
+	width:60px;
+	border: 5px solid white;
+	border-radius: 11px;
+	transform: rotate(-12deg);
+}
+.imgContainer {
+	display: flex;
+	flex-direction: row;
 }
 
 @media (max-width:750px) { 
 	.latest-articles{
 		display: grid;
 		grid-template-columns: 1fr;
-		} }
+	} 
+	
+}
 
 
