add grammarly container also align container and set responsiness to containers

--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,8 @@
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
 .font-balmasiq {
 	font-family: 'Balsamiq Sans', cursive;
 }
@@ -13,7 +18,7 @@ em {
 
 body {
 	margin: 0;
-	max-width:1800px
+	
 }
 
 /*979797*/
@@ -196,26 +201,78 @@ header {
 	display: inline-block;
 	font-size: 12px;
 }
-.articlesContainer {
-	display: flex;
-	grid-template-columns: 1fr 1fr 1fr;
-	flex-flow: row wrap;
+.wholeArticlesSection {
 	background: #f6f3f2;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+.articlesContainer {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	max-width: 1785px;
 	padding-top: 50px;
 	font-family: 'Balsamiq Sans', cursive;
 }
 .articlesDes {
-	width:80%;
+	
 	transition: all .2s ease-in-out;
 	display: flex;
 	flex-direction: column;
 	width: 445px;
 	justify-content: space-between;
-	padding:70px 70px 0 70px;
+	padding:30px 30px 0 30px;
+}
+.articlesGra {
+  width:80%;
+  display: flex;
+  flex-direction: column;
+  width: 445px;
+  justify-content: space-between;
+  padding:70px 70px 0 70px;
+  height: 790px;
+}
+.gramarly {
+  width: 366px;
+  height: 300px;
+  background: hsl(166, 65%, 82%);
+  border-radius: 11px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  color: grey;
+  
 }
 
+.gramrBlock {
+	display: block;
+	text-align: center;
+}
+
+.gramarly img{
+  
+}
+
+.gramarly p {
+  display: block;
+  text-align: center;
+  width:300px;
+  margin-left: 40px;
+  font-size: 19px;
+}
+.gramarButton {
+  background: rgb(44, 216, 150);
+  width: 150px;
+  height: 40px;
+  margin-top: 30px;
+  border: none;
+  color: white;
+}
+
+
+
 .articlesDes h2 {
-	font-size:35px;
+  font-size:35px;
 }
 
 .articlesDes p {
@@ -261,6 +318,10 @@ header {
 	margin: 40px;
 }
 
+.gramIcon {
+	width: 300px;
+}
+
 
 
 
@@ -273,10 +334,13 @@ header {
 }
 
 .wholeMembership{
+	
 	background: #1F2C43;
+	justify-content: center;
 }
 
 .membership{
+	
 	background: #1F2C43;
 	display: flex;
 	flex-direction: row;
@@ -286,7 +350,7 @@ header {
 	height: 500px;
 	color: white;
 	font-size: 22px;
-	width: 85%;
+	width: 60%;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -297,6 +361,7 @@ header {
 }
 
 .membershipImage{
+	width: 40%;
 	flex: 30%;
 	justify-content: start;
 	transform: rotate(-15deg);
@@ -380,4 +445,22 @@ header {
 	margin-left: 25px;
 	font-size: 20px;
 	border-radius: 12px;
+}
+@media (min-width: 1500px) {
+	.articlesContainer {
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+	}
+}
+@media (min-width: 1910px) {
+	.latest-articles {
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+}
+
+@media (min-width: 2950px) {
+	.latest-articles {
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+
+
+	}
 }
