--- a/style/styles.css
+++ b/style/styles.css
@@ -149,10 +149,6 @@ header {
 	width:70%;
 }
 
-.profileImageDiv{
-	margin-top: 20px;
-}
-
 .profileImg {
 	width:60px;
 	border: 5px solid white;
@@ -171,6 +167,10 @@ header {
 .profileName {
 	font-size: 1.4em;
 	text-align: center;
+}
+
+.profileImageDiv{
+	margin-top: 20px;
 }
 
 .imgContainer {
@@ -527,3 +527,61 @@ header {
 	transform: scale(1.6);
 }
 
+.wholeCommunityLinks {
+	display: flex;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.personOfWeek {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	margin-top: 80px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.personOfWeek div {
+	font-family: 'Cormorant Garamond', serif;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	margin:20px;
+}
+
+.personOfWeekProfileImageDiv{	
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	width:260px;
+	border: 5px solid #D33B2B;
+	border-radius: 11px;
+	vertical-align: middle;
+	box-shadow:  0px 20px 40px 10px rgb(54, 52, 52, 0.8);
+	transform: rotate(-15deg);
+	transform-origin: left bottom;
+}
+
+.personOfWeekProfileImageDiv:hover{
+	transform: rotate(0deg);
+	box-shadow:  0px 20px 500px 10px rgb(54, 52, 52, 0.0);
+}
+
+.personOfWeekText {
+	width: 1100px;
+}
+
+.personOfWeek h2 {
+	font-size: 25px;
+	margin-bottom: 30px;
+}
+
+.personOfWeek h4 {
+	font-size: 22px;
+	margin-bottom: 30px;
+}
+
+.personOfWeek h4 a {
+	color: #1374C8;
+}
