--- a/style/styles.css
+++ b/style/styles.css
@@ -747,8 +747,6 @@ header {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap-reverse;
-	justify-content: space-between;
-	align-items: center;
 	height: 400px;
 	color: white;
 	width: 86%;
@@ -757,21 +755,21 @@ header {
 }
 
 .featuredBookText {
-	margin-top: 300px;
+	margin-top: 400px;
 	flex: 70%;
 	padding: 40px;
 }
 
 .featuredBookImage{
 	width: 20%;
+	height: 600px;
 	flex: 30%;
-	justify-content: end;
 	transform: rotate(-15deg);
 	transform-origin: left bottom;
 }
 
 .featuredBookImage img {
-	transform: scale(0.4);
+	transform: scale(0.6);
 }
 
 .featuredBookImage:hover{
