--- a/style/styles.css
+++ b/style/styles.css
@@ -100,6 +100,7 @@ header {
 .more-button:hover {
   background: rgb(54, 52, 52);
 }
+
 .more-button button {
   background: none;
   border: none;
@@ -162,14 +163,14 @@ header {
   border: 5px solid white;
   border-radius: 11px;
   vertical-align: middle;
-  box-shadow: 0px 20px 40px 10px rgb(54, 52, 52, 0.8);
+  box-shadow: 0 20px 40px 10px rgb(54, 52, 52, 0.8);
   transform: rotate(-15deg);
   transform-origin: left bottom;
 }
 
 .profileImg:hover {
   transform: rotate(0deg);
-  box-shadow: 0px 20px 500px 10px rgb(54, 52, 52, 0);
+  box-shadow: 0 20px 500px 10px rgb(54, 52, 52, 0);
 }
 
 .profileName {
@@ -204,7 +205,7 @@ header {
 
 .fa-long-arrow-right {
   margin-top: 70px;
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 .inline {
@@ -398,6 +399,13 @@ header {
   background: #277dcc;
 }
 
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 40px;
+}
+
 .articlesDes:hover .textContainer {
   color: hsl(5, 65%, 51%);
 }
@@ -409,13 +417,6 @@ header {
 .articlesDes:hover {
   background: white;
   transform: scale(1.05);
-}
-
-.textContainer {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  margin: 40px;
 }
 
 .gramIcon {
@@ -480,6 +481,36 @@ header {
   transform: rotate(0deg);
 }
 
+.blu a {
+  text-decoration: none;
+  color: white;
+}
+
+.footerMenuItems p {
+  width: 26%;
+}
+
+.footerMenuItems p a {
+  color: #fff;
+  font-size: 1rem;
+  line-height: 2;
+}
+
+.footerMenuItems a {
+  font-size: 1.5rem;
+  color: #fff;
+  line-height: 2;
+  text-decoration: none;
+}
+
+.footerMenuItems a:hover {
+  color: #333;
+}
+
+.li-copyright a {
+  color: #fff;
+}
+
 .membership p a {
   color: #fff;
 }
@@ -492,7 +523,6 @@ header {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 12px;
@@ -507,11 +537,7 @@ header {
   align-items: center;
   padding: 100px;
   background: rgb(27, 112, 186);
-  background: linear-gradient(
-    180deg,
-    rgba(27, 112, 186, 1) 0%,
-    rgba(68, 152, 217, 1) 100%
-  );
+  background: linear-gradient(180deg,rgba(27, 112, 186, 1) 0%,rgba(68, 152, 217, 1) 100%);
 }
 
 .shippingNow #element1 {
@@ -543,18 +569,6 @@ header {
   padding-bottom: 30px;
 }
 
-.shippingNow #element5 a {
-  background: #fff;
-  color: #277dcc;
-  padding-top: 1px;
-  padding-bottom: 1px;
-  padding: 30px;
-  margin-right: 25px;
-  margin-left: 25px;
-  font-size: 20px;
-  border-radius: 12px;
-}
-
 @media (max-width: 1600px) {
   .smashingAd2 {
     grid-column: span 3;
@@ -565,6 +579,7 @@ header {
 }
 
 @media (min-width: 1910px) {
+
   .latest-articles {
     grid-template-columns: 1fr 1fr 1fr;
   }
@@ -624,8 +639,8 @@ header {
 }
 
 .personOfWeekProfileImageDiv:hover {
-  transform: rotate(0deg);
-  box-shadow: 0px 20px 500px 10px rgb(54, 52, 52, 0);
+  transform: rotate(0);
+  box-shadow: 0 20px 500px 10px rgb(54, 52, 52, 0);
 }
 
 .personOfWeekText {
@@ -644,6 +659,45 @@ header {
 
 .personOfWeek h4 a {
   color: #1374c8;
+}
+
+.linkTexts {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.linkTexts h2 {
+  color: #666;
+  margin-bottom: 20px;
+}
+
+.linkTexts h2 a {
+  color: #666;
+}
+
+.linkTexts h1 {
+  margin-bottom: 20px;
+  font-size: 34px;
+}
+
+.linkTexts h1 a {
+  text-decoration: none;
+  color: #333;
+}
+
+.linkTexts h1 a:hover {
+  color: #d33b2b;
+}
+
+.shippingNow #element5 a {
+  background: #fff;
+  color: #277dcc;
+  padding: 30px;
+  margin-right: 25px;
+  margin-left: 25px;
+  font-size: 20px;
+  border-radius: 12px;
 }
 
 .communityLinks {
@@ -691,35 +745,6 @@ header {
 
 .linkContainer .imgContainer .profileImg {
   border: 5px solid #d33b2b;
-}
-
-.linkTexts {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-.linkTexts h2 {
-  color: #666;
-  margin-bottom: 20px;
-}
-
-.linkTexts h2 a {
-  color: #666;
-}
-
-.linkTexts h1 {
-  margin-bottom: 20px;
-  font-size: 34px;
-}
-
-.linkTexts h1 a {
-  text-decoration: none;
-  color: #333;
-}
-
-.linkTexts h1 a:hover {
-  color: #d33b2b;
 }
 
 .dateAndComment {
@@ -909,18 +934,9 @@ header {
   flex-direction: column;
   justify-content: space-around;
   color: white;
-  background: linear-gradient(
-    180deg,
-    rgba(27, 112, 186, 1) 0%,
-    rgba(68, 152, 217, 1) 100%
-  );
+  background: linear-gradient(180deg, rgba(27, 112, 186, 1) 0%, rgba(68, 152, 217, 1) 100%);
   border-radius: 20px;
   padding-left: 30px;
-}
-
-.blu a {
-  text-decoration: none;
-  color: white;
 }
 
 .smashinHeader2 {
@@ -997,27 +1013,6 @@ footer {
   list-style-image: url(/5242cdc…/77199/images/bullet.svg);
 }
 
-.footerMenuItems p {
-  width: 26%;
-}
-
-.footerMenuItems p a {
-  color: #fff;
-  font-size: 1rem;
-  line-height: 2;
-}
-
-.footerMenuItems a {
-  font-size: 1.5rem;
-  color: #fff;
-  line-height: 2;
-  text-decoration: none;
-}
-
-.footerMenuItems a:hover {
-  color: #333;
-}
-
 .copyright {
   display: flex;
   flex-direction: row;
@@ -1030,10 +1025,6 @@ footer {
   padding: 5px;
   line-height: 2;
   margin-right: 0.5rem;
-}
-
-.li-copyright a {
-  color: #fff;
 }
 
 .ul-copyright {
