--- a/style/styles.css
+++ b/style/styles.css
@@ -310,7 +310,7 @@ header {
 }
 
 .gramarButton {
-  background: #A5A5A5;
+  background: #a5a5a5;
   width: 150px;
   height: 40px;
   margin-top: 30px;
@@ -591,7 +591,11 @@ header {
   align-items: center;
   padding: 100px;
   background: rgb(27, 112, 186);
-  background: linear-gradient(180deg, rgba(97, 97, 97, 1) 0%, rgba(150, 150, 150, 1) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(97, 97, 97, 1) 0%,
+    rgba(150, 150, 150, 1) 100%
+  );
 }
 
 .shippingNow #element1 {
@@ -916,7 +920,7 @@ header {
 }
 
 .js h2 {
-  color: #A5A5A5;
+  color: #a5a5a5;
   background: none;
 }
 
@@ -955,7 +959,7 @@ header {
 }
 
 .purpleButton {
-  background: #A8A8A8;
+  background: #a8a8a8;
 }
 
 .cat20 {
@@ -973,7 +977,11 @@ header {
   flex-direction: column;
   justify-content: space-around;
   color: white;
-  background: linear-gradient(180deg, rgba(77, 77, 77, 1) 0%, rgba(168, 168, 168, 1) 100%);
+  background: linear-gradient(
+    180deg,
+    rgba(77, 77, 77, 1) 0%,
+    rgba(168, 168, 168, 1) 100%
+  );
   border-radius: 20px;
   padding-left: 30px;
 }
@@ -1015,7 +1023,7 @@ header {
 
 .footerFinalAd {
   margin-left: 70px;
-  background: #0067b859;
+  background: #898989;
   width: 70%;
   line-height: 1.8em;
   border-radius: 20px;
@@ -1024,9 +1032,8 @@ header {
 footer {
   background-color: #757575;
   color: white;
-  text-align: center;
   width: auto;
-  height: 700px;
+  height: auto;
 }
 
 .footerMenuItems {
@@ -1035,7 +1042,9 @@ footer {
   justify-content: center;
   align-items: center;
   margin-top: 3rem;
-  padding: 1rem 4rem;
+  padding-top: 5rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
   text-align: center;
 }
 
@@ -1076,7 +1085,7 @@ footer {
   position: fixed;
   bottom: 0;
   right: 0;
-  background: #F5F5F5;
+  background: #f5f5f5;
   transform: rotate(-15deg);
   transform-origin: left bottom;
   border-radius: 12px;
@@ -1103,4 +1112,25 @@ footer {
   background-color: #fff;
   padding: 5%;
   line-height: 1.8em;
+}
+
+.completeFooter {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 13%;
+}
+
+.footerImage {
+  height: 100px;
+  width: 200px;
+  margin-left: 15%;
+  transform: scale(0.6); 
+}
+
+.allCopyright {
+  flex-grow: 1;
+  padding-left: 5%;
+  padding-top: 5%;
 }
